--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
+    "simple-react-google-maps": "^1.1.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
