--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
